RESOLVED FIXED191847
[WPE] Fix some feature guards in WebKit
https://bugs.webkit.org/show_bug.cgi?id=191847
Summary [WPE] Fix some feature guards in WebKit
Don Olmstead
Reported 2018-11-19 17:27:26 PST
There are some feature guards that are incorrect in WPE code.
Attachments
Patch (3.38 KB, patch)
2018-11-19 17:33 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2018-11-19 17:33:56 PST
Adrian Perez
Comment 2 2018-11-20 02:11:55 PST
Comment on attachment 355301 [details] Patch Patch LGTM (informally reviewing).
WebKit Commit Bot
Comment 3 2018-11-20 07:32:41 PST
Comment on attachment 355301 [details] Patch Clearing flags on attachment: 355301 Committed r238397: <https://trac.webkit.org/changeset/238397>
WebKit Commit Bot
Comment 4 2018-11-20 07:32:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.