[WPE] Fix some feature guards in WebKit https://bugs.webkit.org/show_bug.cgi?id=191847

Reviewed by Michael Catanzaro.

Some feature guards are not present in these files.

* UIProcess/API/wpe/PageClientImpl.cpp:
* UIProcess/API/wpe/PageClientImpl.h:
* UIProcess/wpe/WebProcessPoolWPE.cpp:
(WebKit::WebProcessPool::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/206573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238397 268f45cc-cd09-0410-ab3c-d52691b4dbfc